src/simpleinterpretivelanguage/SILParser.java
// $ANTLR 3.5.1 /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g 2016-02-23 09:41:24

	package simpleinterpretivelanguage;
	import java.util.HashMap;
	import java.util.Scanner;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SILParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ESC_SEQ", "HEX_DIGIT", 
		"ID", "INT", "NEWLINE", "OCTAL_ESC", "STRING", "UNICODE_ESC", "WS", "'('", 
		"')'", "'*'", "'+'", "','", "'-'", "'/'", "'='", "'END'", "'INPUT'", "'INTEGER'", 
		"'LET'", "'PRINT'", "'PRINTLN'"
	};
	public static final int EOF=-1;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int COMMENT=4;
	public static final int ESC_SEQ=5;
	public static final int HEX_DIGIT=6;
	public static final int ID=7;
	public static final int INT=8;
	public static final int NEWLINE=9;
	public static final int OCTAL_ESC=10;
	public static final int STRING=11;
	public static final int UNICODE_ESC=12;
	public static final int WS=13;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SILParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SILParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SILParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g"; }


		HashMap memory = new HashMap();



	// $ANTLR start "prog"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:17:1: prog : ( stat )+ ;
	public final void prog() throws RecognitionException {
		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:17:5: ( ( stat )+ )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:17:9: ( stat )+
			{
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:17:9: ( stat )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==COMMENT||(LA1_0 >= 22 && LA1_0 <= 27)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:17:9: stat
					{
					pushFollow(FOLLOW_stat_in_prog32);
					stat();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "stat"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:19:1: stat : ( COMMENT NEWLINE | 'PRINT' print NEWLINE | 'PRINTLN' print NEWLINE | 'INTEGER' integer NEWLINE | 'INPUT' input NEWLINE | 'LET' let NEWLINE | 'END' );
	public final void stat() throws RecognitionException {
		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:19:6: ( COMMENT NEWLINE | 'PRINT' print NEWLINE | 'PRINTLN' print NEWLINE | 'INTEGER' integer NEWLINE | 'INPUT' input NEWLINE | 'LET' let NEWLINE | 'END' )
			int alt2=7;
			switch ( input.LA(1) ) {
			case COMMENT:
				{
				alt2=1;
				}
				break;
			case 26:
				{
				alt2=2;
				}
				break;
			case 27:
				{
				alt2=3;
				}
				break;
			case 24:
				{
				alt2=4;
				}
				break;
			case 23:
				{
				alt2=5;
				}
				break;
			case 25:
				{
				alt2=6;
				}
				break;
			case 22:
				{
				alt2=7;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:19:8: COMMENT NEWLINE
					{
					match(input,COMMENT,FOLLOW_COMMENT_in_stat58); 
					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat60); 
					}
					break;
				case 2 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:20:4: 'PRINT' print NEWLINE
					{
					match(input,26,FOLLOW_26_in_stat65); 
					pushFollow(FOLLOW_print_in_stat67);
					print();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat69); 
					}
					break;
				case 3 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:21:4: 'PRINTLN' print NEWLINE
					{
					match(input,27,FOLLOW_27_in_stat74); 
					System.out.println();
					pushFollow(FOLLOW_print_in_stat78);
					print();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat81); 
					}
					break;
				case 4 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:22:4: 'INTEGER' integer NEWLINE
					{
					match(input,24,FOLLOW_24_in_stat86); 
					pushFollow(FOLLOW_integer_in_stat88);
					integer();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat90); 
					}
					break;
				case 5 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:23:4: 'INPUT' input NEWLINE
					{
					match(input,23,FOLLOW_23_in_stat95); 
					pushFollow(FOLLOW_input_in_stat97);
					input();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat99); 
					}
					break;
				case 6 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:24:4: 'LET' let NEWLINE
					{
					match(input,25,FOLLOW_25_in_stat104); 
					pushFollow(FOLLOW_let_in_stat106);
					let();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat108); 
					}
					break;
				case 7 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:25:4: 'END'
					{
					match(input,22,FOLLOW_22_in_stat113); 
					 System.exit(0); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "print"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:28:1: print : ( expr | STRING );
	public final void print() throws RecognitionException {
		Token STRING2=null;
		int expr1 =0;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:28:7: ( expr | STRING )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= ID && LA3_0 <= INT)||LA3_0==14) ) {
				alt3=1;
			}
			else if ( (LA3_0==STRING) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:28:9: expr
					{
					pushFollow(FOLLOW_expr_in_print127);
					expr1=expr();
					state._fsp--;

					System.out.print(expr1);
					}
					break;
				case 2 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:29:4: STRING
					{
					STRING2=(Token)match(input,STRING,FOLLOW_STRING_in_print134); 
					System.out.print((STRING2!=null?STRING2.getText():null));
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "print"



	// $ANTLR start "integer"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:32:1: integer : identifier ( ',' identifier )* ;
	public final void integer() throws RecognitionException {
		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:32:9: ( identifier ( ',' identifier )* )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:32:11: identifier ( ',' identifier )*
			{
			pushFollow(FOLLOW_identifier_in_integer146);
			identifier();
			state._fsp--;

			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:32:22: ( ',' identifier )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==18) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:32:23: ',' identifier
					{
					match(input,18,FOLLOW_18_in_integer149); 
					pushFollow(FOLLOW_identifier_in_integer151);
					identifier();
					state._fsp--;

					}
					break;

				default :
					break loop4;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "integer"



	// $ANTLR start "identifier"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:35:1: identifier : ID ;
	public final void identifier() throws RecognitionException {
		Token ID3=null;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:36:2: ( ID )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:36:4: ID
			{
			ID3=(Token)match(input,ID,FOLLOW_ID_in_identifier166); 

						Integer v = (Integer)memory.get((ID3!=null?ID3.getText():null));
						if ( v==null ){
							memory.put((ID3!=null?ID3.getText():null),new Integer(0));
						}
						else{
							System.err.println("Duplicate INTEGER : "+(ID3!=null?ID3.getText():null));
						}
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "identifier"



	// $ANTLR start "let"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:48:1: let : ID '=' expr ;
	public final void let() throws RecognitionException {
		Token ID4=null;
		int expr5 =0;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:48:5: ( ID '=' expr )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:48:7: ID '=' expr
			{
			ID4=(Token)match(input,ID,FOLLOW_ID_in_let182); 
			match(input,21,FOLLOW_21_in_let184); 
			pushFollow(FOLLOW_expr_in_let186);
			expr5=expr();
			state._fsp--;


						Integer v = (Integer)memory.get((ID4!=null?ID4.getText():null));
						if ( v!=null ){
							memory.put((ID4!=null?ID4.getText():null), new Integer(expr5));
						}
						else{
							System.err.println("undefined variable "+(ID4!=null?ID4.getText():null));
						}
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "let"



	// $ANTLR start "input"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:60:1: input : inputidentifier ( ',' inputidentifier )* ;
	public final void input() throws RecognitionException {
		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:60:7: ( inputidentifier ( ',' inputidentifier )* )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:60:9: inputidentifier ( ',' inputidentifier )*
			{
			pushFollow(FOLLOW_inputidentifier_in_input202);
			inputidentifier();
			state._fsp--;

			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:60:25: ( ',' inputidentifier )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==18) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:60:26: ',' inputidentifier
					{
					match(input,18,FOLLOW_18_in_input205); 
					pushFollow(FOLLOW_inputidentifier_in_input207);
					inputidentifier();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "input"



	// $ANTLR start "inputidentifier"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:63:1: inputidentifier : ID ;
	public final void inputidentifier() throws RecognitionException {
		Token ID6=null;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:64:2: ( ID )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:64:4: ID
			{
			ID6=(Token)match(input,ID,FOLLOW_ID_in_inputidentifier221); 

						Integer v = (Integer)memory.get((ID6!=null?ID6.getText():null));
						if ( v!=null ){
							Scanner scanner = new Scanner(System.in);
							System.out.println("Enter value for "+(ID6!=null?ID6.getText():null)+" : ");
							Integer val = scanner.nextInt();
							memory.put((ID6!=null?ID6.getText():null),val);
						}
						else{
							System.err.println("undefined variable "+(ID6!=null?ID6.getText():null));
						}
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "inputidentifier"



	// $ANTLR start "expr"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:79:1: expr returns [int value] : e= multExpr ( '+' e= multExpr | '-' e= multExpr )* ;
	public final int expr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:80:5: (e= multExpr ( '+' e= multExpr | '-' e= multExpr )* )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:80:9: e= multExpr ( '+' e= multExpr | '-' e= multExpr )*
			{
			pushFollow(FOLLOW_multExpr_in_expr250);
			e=multExpr();
			state._fsp--;

			value = e;
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:81:9: ( '+' e= multExpr | '-' e= multExpr )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==17) ) {
					alt6=1;
				}
				else if ( (LA6_0==19) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:81:13: '+' e= multExpr
					{
					match(input,17,FOLLOW_17_in_expr266); 
					pushFollow(FOLLOW_multExpr_in_expr270);
					e=multExpr();
					state._fsp--;

					value += e;
					}
					break;
				case 2 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:82:13: '-' e= multExpr
					{
					match(input,19,FOLLOW_19_in_expr286); 
					pushFollow(FOLLOW_multExpr_in_expr290);
					e=multExpr();
					state._fsp--;

					value -= e;
					}
					break;

				default :
					break loop6;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "expr"



	// $ANTLR start "multExpr"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:86:1: multExpr returns [int value] : e= atom ( '*' e= atom | '/' e= atom )* ;
	public final int multExpr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:87:5: (e= atom ( '*' e= atom | '/' e= atom )* )
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:87:9: e= atom ( '*' e= atom | '/' e= atom )*
			{
			pushFollow(FOLLOW_atom_in_multExpr328);
			e=atom();
			state._fsp--;

			value = e;
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:88:6: ( '*' e= atom | '/' e= atom )*
			loop7:
			while (true) {
				int alt7=3;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==16) ) {
					alt7=1;
				}
				else if ( (LA7_0==20) ) {
					alt7=2;
				}

				switch (alt7) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:88:8: '*' e= atom
					{
					match(input,16,FOLLOW_16_in_multExpr340); 
					pushFollow(FOLLOW_atom_in_multExpr344);
					e=atom();
					state._fsp--;

					value *= e;
					}
					break;
				case 2 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:89:8: '/' e= atom
					{
					match(input,20,FOLLOW_20_in_multExpr355); 
					pushFollow(FOLLOW_atom_in_multExpr359);
					e=atom();
					state._fsp--;

					value /= e;
					}
					break;

				default :
					break loop7;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "multExpr"



	// $ANTLR start "atom"
	// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:93:1: atom returns [int value] : ( INT | ID | '(' e= expr ')' );
	public final int atom() throws RecognitionException {
		int value = 0;


		Token INT7=null;
		Token ID8=null;
		int e =0;

		try {
			// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:94:5: ( INT | ID | '(' e= expr ')' )
			int alt8=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt8=1;
				}
				break;
			case ID:
				{
				alt8=2;
				}
				break;
			case 14:
				{
				alt8=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}
			switch (alt8) {
				case 1 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:94:9: INT
					{
					INT7=(Token)match(input,INT,FOLLOW_INT_in_atom393); 
					value = Integer.parseInt((INT7!=null?INT7.getText():null));
					}
					break;
				case 2 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:95:9: ID
					{
					ID8=(Token)match(input,ID,FOLLOW_ID_in_atom405); 

					        Integer v = (Integer)memory.get((ID8!=null?ID8.getText():null));
					        if ( v!=null ) value = v.intValue();
					        else System.err.println("undefined variable "+(ID8!=null?ID8.getText():null));
					        
					}
					break;
				case 3 :
					// /Users/vipinsharma/NetBeansProjects/SimpleInterpretiveLanguage/Grammar/SIL.g:101:9: '(' e= expr ')'
					{
					match(input,14,FOLLOW_14_in_atom425); 
					pushFollow(FOLLOW_expr_in_atom429);
					e=expr();
					state._fsp--;

					match(input,15,FOLLOW_15_in_atom431); 
					value = e;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "atom"

	// Delegated rules



	public static final BitSet FOLLOW_stat_in_prog32 = new BitSet(new long[]{0x000000000FC00012L});
	public static final BitSet FOLLOW_COMMENT_in_stat58 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat60 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_26_in_stat65 = new BitSet(new long[]{0x0000000000004980L});
	public static final BitSet FOLLOW_print_in_stat67 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat69 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_27_in_stat74 = new BitSet(new long[]{0x0000000000004980L});
	public static final BitSet FOLLOW_print_in_stat78 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat81 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_24_in_stat86 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_integer_in_stat88 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat90 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_23_in_stat95 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_input_in_stat97 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat99 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_25_in_stat104 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_let_in_stat106 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_NEWLINE_in_stat108 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_22_in_stat113 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_expr_in_print127 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_STRING_in_print134 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_identifier_in_integer146 = new BitSet(new long[]{0x0000000000040002L});
	public static final BitSet FOLLOW_18_in_integer149 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_identifier_in_integer151 = new BitSet(new long[]{0x0000000000040002L});
	public static final BitSet FOLLOW_ID_in_identifier166 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_let182 = new BitSet(new long[]{0x0000000000200000L});
	public static final BitSet FOLLOW_21_in_let184 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_expr_in_let186 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_inputidentifier_in_input202 = new BitSet(new long[]{0x0000000000040002L});
	public static final BitSet FOLLOW_18_in_input205 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_inputidentifier_in_input207 = new BitSet(new long[]{0x0000000000040002L});
	public static final BitSet FOLLOW_ID_in_inputidentifier221 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_multExpr_in_expr250 = new BitSet(new long[]{0x00000000000A0002L});
	public static final BitSet FOLLOW_17_in_expr266 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_multExpr_in_expr270 = new BitSet(new long[]{0x00000000000A0002L});
	public static final BitSet FOLLOW_19_in_expr286 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_multExpr_in_expr290 = new BitSet(new long[]{0x00000000000A0002L});
	public static final BitSet FOLLOW_atom_in_multExpr328 = new BitSet(new long[]{0x0000000000110002L});
	public static final BitSet FOLLOW_16_in_multExpr340 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_atom_in_multExpr344 = new BitSet(new long[]{0x0000000000110002L});
	public static final BitSet FOLLOW_20_in_multExpr355 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_atom_in_multExpr359 = new BitSet(new long[]{0x0000000000110002L});
	public static final BitSet FOLLOW_INT_in_atom393 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_atom405 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_14_in_atom425 = new BitSet(new long[]{0x0000000000004180L});
	public static final BitSet FOLLOW_expr_in_atom429 = new BitSet(new long[]{0x0000000000008000L});
	public static final BitSet FOLLOW_15_in_atom431 = new BitSet(new long[]{0x0000000000000002L});
}
